--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mcp-prototype",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "基于Model Context Protocol(MCP)协议开发的AI辅助工具，旨在帮助开发者快速构建软件原型。",
   "type": "module",
   "main": "./dist/index.js",
@@ -10,7 +10,9 @@
   "scripts": {
     "build": "tsc",
     "start": "node ./dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -25,10 +27,15 @@
   "homepage": "https://github.com/llxxbb/mcp-prototype#readme",
   "devDependencies": {
     "@modelcontextprotocol/sdk": "^1.13.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.0.3",
+    "jest": "^30.0.2",
+    "ts-jest": "^29.4.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@modelcontextprotocol/server-everything": "^2025.5.12",
     "axios": "^1.10.0"
   }
 }
