--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "rootDir": "./src",
     "sourceMap": true,
     "declaration": true,
-    "types": ["node"]
+    "types": ["node", "jest"],
+    "isolatedModules": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
