--- a/package.json
+++ b/package.json
@@ -4,13 +4,10 @@
   "description": "基于Model Context Protocol(MCP)协议开发的AI辅助工具，旨在帮助开发者快速构建软件原型。",
   "type": "module",
   "main": "./dist/index.js",
-  "directories": {
-    "doc": "doc"
-  },
   "scripts": {
     "build": "tsc",
     "start": "node ./dist/index.js",
-    "test": "jest",
+    "test": "set NODE_OPTIONS=--experimental-vm-modules && jest --config ./jest.config.mjs",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
@@ -26,16 +23,13 @@
   },
   "homepage": "https://github.com/llxxbb/mcp-prototype#readme",
   "devDependencies": {
-    "@modelcontextprotocol/sdk": "^1.13.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.3",
     "jest": "^30.0.2",
     "ts-jest": "^29.4.0",
-    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@modelcontextprotocol/server-everything": "^2025.5.12",
-    "axios": "^1.10.0"
+    "@modelcontextprotocol/sdk": "^1.13.0"
   }
 }
