--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "@types/node": "^24.0.3",
     "jest": "^30.0.2",
     "ts-jest": "^29.4.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "zod": "^3.25.67"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.13.0"
+    "@modelcontextprotocol/sdk": "^1.13.1"
   }
 }
