--- a/package.json
+++ b/package.json
@@ -2,35 +2,35 @@
   "name": "mcp-prototype",
   "version": "0.1.0",
   "description": "基于Model Context Protocol(MCP)协议开发的AI辅助工具，旨在帮助开发者快速构建软件原型。",
+  "private": true,
   "type": "module",
-  "main": "./dist/index.js",
   "scripts": {
     "build": "tsc",
     "start": "node ./dist/index.js",
+    "format": "prettier --write .",
     "test": "set NODE_OPTIONS=--experimental-vm-modules && jest --config ./jest.config.mjs",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/llxxbb/mcp-prototype.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/llxxbb/mcp-prototype/issues"
-  },
-  "homepage": "https://github.com/llxxbb/mcp-prototype#readme",
-  "devDependencies": {
-    "@types/jest": "^30.0.0",
-    "@types/node": "^24.0.3",
-    "jest": "^30.0.2",
-    "ts-jest": "^29.4.0",
-    "typescript": "^5.8.3",
-    "zod": "^3.25.67"
+    "lint:check": "eslint \"**/*.{js,ts,tsx}\"",
+    "lint": "eslint src --ext .ts,.tsx --fix --config eslint.config.mjs"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.13.1"
+    "@modelcontextprotocol/sdk": "^1.13.1",
+    "zod": "^3.25.67"
+  },
+  "devDependencies": {
+    "typescript": "^5.8.3",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.0.3",
+    "jest": "^30.0.3",
+    "ts-jest": "^29.1.1",
+    "prettier": "^3.6.1",
+    "eslint": "^9.23.0",
+    "typescript-eslint": "^8.28.0",
+    "@typescript-eslint/eslint-plugin": "^8.28.0",
+    "@typescript-eslint/parser": "^8.28.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-prettier": "^5.5.0",
+    "eslint-plugin-promise": "^6.1.1"
   }
 }
