--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "ESNext", 
-    "moduleResolution": "node",
+    "module": "NodeNext", 
+    "moduleResolution": "nodenext",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -11,7 +11,6 @@
     "rootDir": "./src",
     "sourceMap": true,
     "declaration": true,
-    "types": ["node", "jest"],
     "isolatedModules": true
   },
   "include": ["src/**/*"],
