--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.13.1",
+    "fastify": "^5.4.0",
     "neverthrow": "^8.2.0",
     "zod": "^3.25.67"
   },
