--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint src --fix --config eslint.config.mjs"
   },
   "dependencies": {
+    "@fastify/static": "^8.2.0",
     "@modelcontextprotocol/sdk": "^1.13.1",
     "fastify": "^5.4.0",
     "neverthrow": "^8.2.0",
