--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^16.0.1",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.3",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
@@ -32,6 +33,11 @@
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^30.0.3",
     "prettier": "^3.6.1",
+    "rollup": "^4.44.1",
+    "rollup-plugin-css-only": "^4.5.2",
+    "rollup-plugin-svelte": "^7.2.2",
+    "svelte": "^5.34.9",
+    "svelte-preprocess": "^6.0.3",
     "ts-jest": "^29.1.1",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.28.0"
