--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,10 @@
     "rootDir": "./src",
     "sourceMap": true,
     "declaration": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "verbatimModuleSyntax": true,
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  
 }
