--- a/package.json
+++ b/package.json
@@ -1,45 +1,50 @@
 {
-  "name": "mcp-prototype",
-  "version": "0.1.0",
-  "description": "基于Model Context Protocol(MCP)协议开发的AI辅助工具，旨在帮助开发者快速构建软件原型。",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "tsc && rollup -c",
-    "start": "node ./dist/index.js",
-    "format": "prettier --write .",
-    "test": "set NODE_OPTIONS=--experimental-vm-modules && jest --config ./jest.config.mjs",
-    "lint:check": "eslint \"**/*.{js,ts,tsx}\"",
-    "lint": "eslint src --fix --config eslint.config.mjs"
-  },
-  "dependencies": {
-    "@fastify/static": "^8.2.0",
-    "@modelcontextprotocol/sdk": "^1.13.1",
-    "fastify": "^5.4.0",
-    "neverthrow": "^8.2.0",
-    "zod": "^3.25.67"
-  },
-  "devDependencies": {
-    "@rollup/plugin-node-resolve": "^16.0.1",
-    "@types/jest": "^30.0.0",
-    "@types/node": "^24.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.28.0",
-    "@typescript-eslint/parser": "^8.28.0",
-    "eslint": "^9.23.0",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-prettier": "^5.5.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "jest": "^30.0.3",
-    "prettier": "^3.6.1",
-    "rollup": "^4.44.1",
-    "rollup-plugin-css-only": "^4.5.2",
-    "rollup-plugin-svelte": "^7.2.2",
-    "svelte": "^5.34.9",
-    "svelte-preprocess": "^6.0.3",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.28.0"
-  }
+	"name": "mcp-prototype",
+	"version": "0.1.0",
+	"description": "基于Model Context Protocol(MCP)协议开发的AI辅助工具，旨在帮助开发者快速构建软件原型。",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"start": "node ./dist/index.js",
+		"dev": "vite dev",
+		"build:web": "vite build",
+		"build:mcp": "tsc -p tsconfig.mcp.json",
+		"preview": "vite preview",
+		"prepare": "svelte-kit sync || echo ''",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"format": "prettier --write .",
+		"lint": "prettier --check . && eslint .",
+		"test:unit": "vitest",
+		"test": "npm run test:unit -- --run"
+	},
+	"dependencies": {
+		"@fastify/static": "^8.2.0",
+		"@modelcontextprotocol/sdk": "^1.13.1",
+		"fastify": "^5.4.0",
+		"neverthrow": "^8.2.0",
+		"zod": "^3.25.67"
+	},
+	"devDependencies": {
+		"@eslint/compat": "^1.2.5",
+		"@eslint/js": "^9.18.0",
+		"@sveltejs/adapter-auto": "^6.0.0",
+		"@sveltejs/kit": "^2.16.0",
+		"@sveltejs/vite-plugin-svelte": "^5.1.0",
+		"@vitest/browser": "^3.2.3",
+		"eslint": "^9.18.0",
+		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-svelte": "^3.0.0",
+		"globals": "^16.0.0",
+		"playwright": "^1.53.0",
+		"prettier": "^3.4.2",
+		"prettier-plugin-svelte": "^3.3.3",
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.0",
+		"typescript": "^5.0.0",
+		"typescript-eslint": "^8.20.0",
+		"vite": "^6.2.6",
+		"vitest": "^3.2.3",
+		"vitest-browser-svelte": "^0.1.0"
+	}
 }
