--- a/tsconfig.mcp.json
+++ b/tsconfig.mcp.json
@@ -14,7 +14,6 @@
     "isolatedModules": true,
     "verbatimModuleSyntax": true,
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules"],
-  
+  "include": ["src/mcp/**/*"],
+  "exclude": ["src/mcp/**/*.test.ts"]
 }
