--- a/package.json
+++ b/package.json
@@ -5,14 +5,10 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"start": "node ./dist/index.js",
-		"dev": "vite dev",
-		"build:web": "vite build",
-		"build:mcp": "tsc -p tsconfig.mcp.json",
-		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"start:mcp": "node dist/mcp/index.cjs",
+		"start:web": "node ./dist/mcp/web.js",
+		"build:web": "set TSCONFIG_PATH=tsconfig.web.json && vite build -c ./vite.config.web.ts",
+		"build:mcp": "set TSCONFIG_PATH=tsconfig.mcp.json && vite build -c ./vite.config.mcp.ts",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
 		"test:unit": "vitest",
@@ -29,7 +25,7 @@
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
 		"@sveltejs/adapter-auto": "^6.0.0",
-		"@sveltejs/kit": "^2.16.0",
+		"@sveltejs/kit": "^2.22.2",
 		"@sveltejs/vite-plugin-svelte": "^5.1.0",
 		"@vitest/browser": "^3.2.3",
 		"eslint": "^9.18.0",
@@ -43,7 +39,7 @@
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
-		"vite": "^6.2.6",
+		"vite": "^6.3.5",
 		"vitest": "^3.2.3",
 		"vitest-browser-svelte": "^0.1.0"
 	}
