--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"dependencies": {
 		"@modelcontextprotocol/sdk": "^1.13.1",
 		"neverthrow": "^8.2.0",
+		"node-fetch": "^2.7.0",
 		"zod": "^3.25.67"
 	},
 	"devDependencies": {
