fix compile problems

--- a/tsconfig.mcp.json
+++ b/tsconfig.mcp.json
@@ -12,9 +12,6 @@
     "sourceMap": true,
     "declaration": true,
     "isolatedModules": true,
-    "verbatimModuleSyntax": true,
-    "paths": {
-      "@/*": ["./src/mcp/*"]
-    }
-  }
+  },
+  "include": ["src/mcp/**/*.ts", "src/mcp/**/*.js"],
 }
