--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@sveltejs/kit": "^2.22.2",
 		"@sveltejs/vite-plugin-svelte": "^5.1.0",
 		"@types/node": "^24.0.10",
+		"@types/node-fetch": "^2.6.12",
 		"@vitest/browser": "^3.2.3",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
