--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@types/node": "^24.0.10",
 		"@types/node-fetch": "^2.6.12",
 		"@vitest/browser": "^3.2.3",
+		"cheerio": "^1.1.0",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
@@ -43,7 +44,7 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.3.5",
-		"vitest": "^3.2.3",
+		"vitest": "^3.2.4",
 		"vitest-browser-svelte": "^0.1.0"
 	}
 }
