--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "mcp-prototype",
 	"version": "0.1.0",
 	"description": "基于Model Context Protocol(MCP)协议开发的AI辅助工具，旨在帮助开发者快速构建软件原型。",
+	"license": "see LICENSE in LICENSE.md",
 	"private": true,
 	"type": "module",
 	"scripts": {
