--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-	"name": "mcp-prototype",
-	"version": "0.1.0",
+	"name": "@llxxbb/mcp-prototype",
+	"version": "0.1.1",
 	"description": "基于Model Context Protocol(MCP)协议开发的AI辅助工具，旨在帮助开发者快速构建软件原型。",
 	"license": "see LICENSE in LICENSE.md",
-	"private": true,
 	"type": "module",
 	"scripts": {
 		"build:mcp": "tsc -p ./tsconfig.mcp.json",
@@ -15,26 +14,30 @@
 		"lint:mcp": "prettier --check . && eslint --fix -c ./eslint.config.mcp.js ./src/mcp/",
 		"lint:web": "prettier --check . && eslint --fix  -c ./eslint.config.web.js ./src/",
 		"test": "vitest",
-	    "test:ui": "vitest --ui",
-	    "test:debug": "vitest --inspect-brk"
+		"test:ui": "vitest --ui",
+		"test:debug": "vitest --inspect-brk"
+	},
+	"bin": {
+		"prototype-mcp": "dist/mcp/index.js"
 	},
 	"dependencies": {
 		"@modelcontextprotocol/sdk": "^1.13.1",
 		"marked": "^16.0.0",
 		"neverthrow": "^8.2.0",
 		"node-fetch": "^2.7.0",
+		"vite": "^6.3.5",
+		"@sveltejs/kit": "^2.22.2",
+		"cheerio": "^1.1.0",
 		"zod": "^3.25.67"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
 		"@sveltejs/adapter-auto": "^6.0.0",
-		"@sveltejs/kit": "^2.22.2",
 		"@sveltejs/vite-plugin-svelte": "^5.1.0",
 		"@types/node": "^24.0.10",
 		"@types/node-fetch": "^2.6.12",
 		"@vitest/browser": "^3.2.3",
-		"cheerio": "^1.1.0",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
@@ -46,7 +49,6 @@
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
-		"vite": "^6.3.5",
 		"vitest": "^3.2.4",
 		"vitest-browser-svelte": "^0.1.0"
 	}
